style: widescreen, scrollbar, fix: long words

--- a/src/scss/pages/_contact.scss
+++ b/src/scss/pages/_contact.scss
@@ -19,13 +19,7 @@
   overflow: visible;
   box-shadow: 10px 0px 10px -5px rgba(0, 0, 0, 0.1);
 
-  @media (max-width: 426px) {
-    width: 95%;
-  }
 
-  @media (max-width: 343px) {
-    width: 90%;
-  }
 }
 
 .contacts-scroll-area {
@@ -91,11 +85,11 @@
 
   &.active {
     background-color: #2a3647;
-    
+
     .contact-name {
       color: #ffffff;
     }
-    
+
     .contact-email {
       color: #007cee;
     }
@@ -168,7 +162,7 @@
 
 .btn-mobile-add {
   display: none;
-  
+
   @include mobile-tablet {
     display: flex;
     justify-content: center;
@@ -201,7 +195,7 @@
 @include mobile-tablet {
   .contact-list-container {
     height: calc(100vh - 80px);
-    width: 100%;
+    width: 80%;
     max-width: 456px;
     margin: 0 auto;
     box-shadow: none;
@@ -211,10 +205,12 @@
   }
 }
 
+
+
 @include mobile {
   .contact-list-container {
     height: calc(100vh - 160px);
-    width: 100%;
+    width: 80%;
     max-width: 456px;
     margin: 0 auto;
     box-shadow: none;
@@ -232,8 +228,32 @@
   }
 }
 
-@media (max-width: 360px) {
+@include small-mobile {
   .contact-list-container {
     height: calc(100vh - 160px);
+    width: 90%;
   }
+}
+
+.contacts-scroll-area::-webkit-scrollbar {
+  width: 14px;
+
+  @include landscape {
+    width: 12px;
+  }
+}
+
+.contacts-scroll-area::-webkit-scrollbar-track {
+  background: $white;
+}
+
+.contacts-scroll-area::-webkit-scrollbar-thumb {
+  background: $dark-grey-color;
+  border-radius: 6px;
+  border: 4px solid $white;
+  background-clip: content-box;
+}
+
+.contacts-scroll-area::-webkit-scrollbar-thumb:hover {
+  background: $dark-grey-color;
 }
